--- a/shopbyjersey/pom.xml
+++ b/shopbyjersey/pom.xml
@@ -11,7 +11,8 @@
 		<jersey.version>2.22.2</jersey.version>
 		<jersey-spring.version>2.13</jersey-spring.version>
 		<spring.version>4.0.2.RELEASE</spring.version>
-		<!-- --> <log4j.version>1.2.17</log4j.version> 
+		<!-- -->
+		<log4j.version>1.2.17</log4j.version>
 
 		<!--<servlet-api-version>3.1.0</servlet-api-version> -->
 		<!--<logback.version>1.1.1</logback.version> -->
@@ -151,11 +152,42 @@
 			<version>1.4</version>
 		</dependency>
 
+	<!-- https://mvnrepository.com/artifact/ojdbc/ojdbc -->
+<!-- https://mvnrepository.com/artifact/oracle/ojdbc -->
+<!-- https://mvnrepository.com/artifact/ojdbc/ojdbc -->
+
+
+
+		<!-- 
 		<dependency>
-			<groupId>com.oracle</groupId>
-			<artifactId>ojdbc14</artifactId>
-			<version>10.2.0.4.0</version>
+			<groupId>javax.servlet</groupId>
+			<artifactId>javax.servlet-api</artifactId>
+			<version>3.0.1</version>
 		</dependency>
+		<dependency>
+			<groupId>javax.servlet.jsp</groupId>
+			<artifactId>jsp-api</artifactId>
+			<version>2.1</version>
+		</dependency>
+		<dependency>
+			<groupId>javax.servlet</groupId>
+			<artifactId>jstl</artifactId>
+			<version>1.2</version>
+		</dependency>-->
+		
+		<!--taglib 
+		<dependency>
+			<groupId>taglibs</groupId>
+			<artifactId>standard</artifactId>
+			<version>1.1.2</version>
+		</dependency> -->
+
+		<!-- <dependency> <groupId>javax.servlet</groupId> <artifactId>servlet-api</artifactId> 
+			<version>2.5</version> <scope>provided</scope> </dependency> <dependency> 
+			<groupId>javax.servlet.jsp</groupId> <artifactId>jsp-api</artifactId> <version>2.1</version> 
+			<scope>provided</scope> </dependency> <dependency> <groupId>javax.servlet</groupId> 
+			<artifactId>jstl</artifactId> <version>1.2</version> </dependency> -->
+			
 	</dependencies>
 
 	<build>
