增加了接口

--- a/shopbyjersey/pom.xml
+++ b/shopbyjersey/pom.xml
@@ -151,43 +151,16 @@
 			<artifactId>commons-dbcp</artifactId>
 			<version>1.4</version>
 		</dependency>
+		<!-- https://mvnrepository.com/artifact/com.oracle/ojdbc14 -->
+		<!-- https://mvnrepository.com/artifact/com.oracle/ojdbc14 -->
+<!-- https://mvnrepository.com/artifact/oracle/ojdbc14 -->
+<!-- https://mvnrepository.com/artifact/ojdbc14/ojdbc14 -->
 
-	<!-- https://mvnrepository.com/artifact/ojdbc/ojdbc -->
-<!-- https://mvnrepository.com/artifact/oracle/ojdbc -->
-<!-- https://mvnrepository.com/artifact/ojdbc/ojdbc -->
-
-
-
-		<!-- 
 		<dependency>
-			<groupId>javax.servlet</groupId>
-			<artifactId>javax.servlet-api</artifactId>
-			<version>3.0.1</version>
+			<groupId>com.oracle</groupId>
+			<artifactId>ojdbc14</artifactId>
+			<version>10.2.0.4.0</version>
 		</dependency>
-		<dependency>
-			<groupId>javax.servlet.jsp</groupId>
-			<artifactId>jsp-api</artifactId>
-			<version>2.1</version>
-		</dependency>
-		<dependency>
-			<groupId>javax.servlet</groupId>
-			<artifactId>jstl</artifactId>
-			<version>1.2</version>
-		</dependency>-->
-		
-		<!--taglib 
-		<dependency>
-			<groupId>taglibs</groupId>
-			<artifactId>standard</artifactId>
-			<version>1.1.2</version>
-		</dependency> -->
-
-		<!-- <dependency> <groupId>javax.servlet</groupId> <artifactId>servlet-api</artifactId> 
-			<version>2.5</version> <scope>provided</scope> </dependency> <dependency> 
-			<groupId>javax.servlet.jsp</groupId> <artifactId>jsp-api</artifactId> <version>2.1</version> 
-			<scope>provided</scope> </dependency> <dependency> <groupId>javax.servlet</groupId> 
-			<artifactId>jstl</artifactId> <version>1.2</version> </dependency> -->
-			
 	</dependencies>
 
 	<build>
