--- a/shopbyjersey/src/main/resources/log4j.properties
+++ b/shopbyjersey/src/main/resources/log4j.properties
@@ -1,5 +1,5 @@
 #\u6307\u5b9a\u67d0\u4e2a\u5305\u4e2dlog
-log4j.logger.com.cn.jersesimpl=info,stdout
+log4j.logger.com.cn.controller=info,stdout
 #log4j.rootLogger = info,stdout
 log4j.appender.info = org.apache.log4j.ConsoleAppender 
 log4j.appender.info.Target = System.out 
