--- a/shopbyjersey/pom.xml
+++ b/shopbyjersey/pom.xml
@@ -178,13 +178,13 @@
 			<version>1.4</version>
 		</dependency>
 		
-		<!--  
+		<!-- 在git上更改了pomx.ml
 		<dependency>
 			<groupId>com.oracle</groupId>
 			<artifactId>ojdbc14</artifactId>
 			<version>10.2.0.4.0</version>
 		</dependency>
-		-->
+		 -->
 		
 	</dependencies>
 
